# codex-app-server-sdk

./: .gitignore  README.md  RELEASE.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: approvals-and-sandbox.md  behavior-guarantees.md  conversation.md  examples.md  getting-started.md  index.md  protocol-mapping.md  threads-and-config.md  timeouts-continuation-cancel.md  transports.md
docs/api/: client.md  errors.md  index.md  models.md  package.md  protocol.md  transport.md
docs/recipes/: index.md
examples/: chat_session_stdio.py  chat_session_websocket.py  chat_steps_rich.py  thread_config_and_fork.py  thread_ops_showcase.py
src/codex_app_server_client/: __init__.py  client.py  errors.py  models.py  protocol.py  transport.py
src/codex_app_server_sdk/: __init__.py  client.py  models.py  protocol.py
tests/: test_approval_requests.py  test_chat_assembly_completed_item.py  test_chat_continuation.py  test_chat_steps.py  test_client_chat_once.py  test_client_lifecycle.py  test_protocol.py  test_thread_handle.py  test_transport.py
