[project]
name = "codex-app-server-client"
version = "0.1.0"
description = "Async Python client for Codex app-server over stdio and websocket."
readme = "README.md"
authors = [
    { name = "Mariusz Woloszyn", email = "emsi@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.8.0",
    "websockets>=16,<17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "black>=26.1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]
